# simple_ipc

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  client.cpp  example.pb.cc  example.pb.h  ipc_client.cpp  ipc_server.cpp  rpc_client.cpp  rpc_server.cpp  server.cpp
src/: CMakeLists.txt
src/simple_ipc/: byte_order.hpp  client.hpp  connection.hpp  connection_mgr.hpp  connector.hpp  crc.hpp  defs.hpp  ibuffer.hpp  ipc_base.hpp  ipc_client.hpp  listener.hpp  named_event.hpp  named_mutext.hpp  named_semaphore.hpp  named_synchronization_object.hpp  packet.hpp  ringbuffer.hpp  server.hpp  timer.hpp  utility.hpp
src/simple_ipc/detail/: connection.hpp  connection_mgr.hpp  connector.hpp  err_code.hpp  ibuffer.hpp  listener.hpp  packet.hpp  ringbuffer.hpp  rpc_protocol.hpp  timer.hpp  utility.hpp
src/simple_ipc/ipc/: ipc_client.hpp  ipc_server.hpp
src/simple_ipc/rpc/: rpc_client.hpp  rpc_server.hpp
